# HaskellFileServer

./: HaskellFileServer.cabal  LICENSE  README.md
src/: Main.hs
src/Routes/: FileUploadRoute.hs
