name:                HaskellFileServer 
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/sudohalt/HaskellFileServer#readme
license:             MIT
license-file:        LICENSE
author:              Umayah Abdennabi
copyright:           2016 Umayah Abdennabi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable HaskellFileServer-exe
  hs-source-dirs:      src 
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -L/usr/local/lib -L/usr/lib
  build-depends:       base
                     , HaskellFileServer 
                     , snap-core >=0.9 && <0.10
                     , snap-server >=0.9 && <0.10
                     , bytestring >=0.10 && <0.11
                     , transformers
                     , directory >= 1.0.1.1
                     , filepath >= 1.4.0.0
  default-language:    Haskell2010

test-suite HaskellFileServer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HaskellFileServer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sudohalt/HaskellFileServer
